Cambio de modelo FBX a KITCHEN.glb con soporte DRACO y carga optimizada de texturas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="info">
-        <h1>Visor VR - Salón de Clases</h1>
+        <h1>Visor VR - Cocina 3D</h1>
         <p>Usa el botón VR para ingresar al modo de realidad virtual</p>
         <div id="loading">Cargando modelo 3D...</div>
     </div>
